# physx_sdf_discrepancy

./: CMakeLists.txt  Dockerfile  README.md  load_query_viz.py  sdf_discrepancy.cpp
.devcontainer/: devcontainer.json
data/: collision_log.json  watertightshape.stl
